--- a/styles/variables.scss
+++ b/styles/variables.scss
@@ -1,5 +1,5 @@
-@import url('https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Fruktur&family=Lato:wght@300;400;700&display=swap');
 
-$font-size-root: 14px;
+$body-font-family: 'Lato', sans-seriff;
+$font-size-root: 3rem;
 $border-radius-root: 6px;
-$body-font-family: 'Lato', sans-serif;
